# racocheck

./: CMakeLists.txt  LICENSE  README.md  main.cpp
source/: raco.h
source/raco/algorithm/: evaluator.h  evaluator.hpp
source/raco/core/: raco.h  raco.hpp  state.h  state.hpp
source/raco/coros/: task.h  task.hpp
source/raco/misc/: macros.h  pack.h  traits.h
